# ai-yt-transcripts

./: .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
articles/: plan.md
scripts/: daily-fetch.sh
src/: config.py  fetch.py  ingest.py  query.py
transcripts/: 2026-01-14-task-queues-replacing-chat.md  2026-01-16-stop-competing-build-this.md  2026-01-17-lecun-llms-dead-end-meta-benchmarks.md  2026-01-18-image-generation-hidden-bottleneck.md  2026-01-19-tool-stack-4-patterns-that-work.md  2026-01-20-disposable-software-hidden-costs.md  2026-01-21-clear-specs-produce-broken-output.md  2026-01-22-people-getting-promoted-ai-mindset.md  2026-01-23-builders-identity-shift.md  2026-01-24-kilo-code-coming-for-cursor.md  2026-01-25-best-employees-quit-ai.md  2026-01-26-more-agents-make-things-worse.md  2026-01-27-11-tab-financial-model.md  2026-01-29-cold-application-waste-of-time.md  2026-01-31-meta-up-microsoft-down-tesla.md  2026-02-03-openclaw-agents-hiring-each-other.md  2026-02-04-openai-slowing-hiring-anthropic-engineers.md  2026-02-05-stop-prompting-customize-ai.md  2026-02-07-90-percent-fail-vibe-coding.md  2026-02-08-panic-buying-compute-infrastructure-crisis.md  2026-02-12-openclaw-developers-building.md  2026-02-15-job-market-split.md  2026-02-16-codex-vs-opus-benchmark.md  2026-02-18-5-levels-of-ai-coding.md  2026-02-19-biggest-ai-career-opportunity.md  2026-02-20-1000-a-day-in-ai-costs.md  2026-02-21-285b-sell-off-infrastructure-story.md  2026-02-22-anthropic-tested-16-models-structural-failure.md  (+443 more)
(+22 files in other folders)
