[project]
name = "ai-yt-transcripts"
version = "0.1.0"
description = "RAG pipeline for YouTube transcript search using LanceDB + OpenAI embeddings"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
]

[project.scripts]
ingest = "src.ingest:main"
query = "src.query:main"
